--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <h1>記事一覧</h1>
 <%= link_to "投稿する", new_article_path, class:"post" %>
-<%= link_to "新規登録", new_article_path, class:"post" %>
+<%= link_to "新規登録", new_ｐarticle_path, class:"post" %>
 
 <% @articles.each do |article| %>
   <div class="article">
